--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -9,7 +9,8 @@
 		".": {
 			"require": "./build/index.cjs.min.js",
 			"default": "./build/index.esm.min.js"
-		}
+		},
+		"./style.css": "./style.css"
 	},
 	"peerDependencies": {
 		"react": ">=17"
@@ -17,10 +18,13 @@
 	"devDependencies": {
 		"@rollup/plugin-typescript": "8.2.5",
 		"@types/react": "17.0.19",
+		"builtin-modules": "3.2.0",
 		"rollup": "2.56.3",
 		"rollup-plugin-delete": "2.0.0",
 		"rollup-plugin-dts": "4.0.0",
+		"rollup-plugin-node-externals": "2.2.0",
 		"rollup-plugin-terser": "7.0.2",
+		"rollup-plugin-typescript-paths": "1.3.0",
 		"typescript": "4.4.2",
 		"tslib": "2.3.1"
 	},
