--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "@calmdownval/presentation",
+	"description": "React scroll presentations",
 	"version": "1.0.0",
 	"license": "ISC",
 	"main": "./build/index.cjs.min.js",
@@ -12,6 +13,15 @@
 		},
 		"./style.css": "./style.css"
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/CalmDownVal/presentation.git"
+	},
+	"keywords": [
+		"presentation",
+		"scroll",
+		"react"
+	],
 	"peerDependencies": {
 		"react": ">=17"
 	},
