--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -1,15 +1,16 @@
 {
 	"name": "@calmdownval/presentation",
-	"description": "React scroll presentations",
-	"version": "1.0.0",
+	"description": "Preact scroll presentations",
+	"version": "2.0.0",
 	"license": "ISC",
 	"main": "./build/index.cjs.min.js",
-	"module": "./build/index.esm.min.js",
+	"module": "./build/index.esm.min.mjs",
 	"types": "./build/index.d.ts",
 	"exports": {
 		".": {
 			"require": "./build/index.cjs.min.js",
-			"default": "./build/index.esm.min.js"
+			"default": "./build/index.esm.min.mjs",
+			"types": "./build/index.d.ts"
 		},
 		"./style.css": "./style.css"
 	},
@@ -20,23 +21,23 @@
 	"keywords": [
 		"presentation",
 		"scroll",
-		"react"
+		"preact"
 	],
 	"peerDependencies": {
-		"react": ">=17"
+		"preact": ">=10"
 	},
 	"devDependencies": {
-		"@rollup/plugin-typescript": "8.3.0",
-		"@types/react": "17.0.38",
+		"@rollup/plugin-typescript": "8.3.2",
 		"builtin-modules": "3.2.0",
-		"rollup": "2.63.0",
+		"preact": "10.7.2",
+		"rollup": "2.72.1",
 		"rollup-plugin-delete": "2.0.0",
-		"rollup-plugin-dts": "4.1.0",
-		"rollup-plugin-node-externals": "3.1.2",
+		"rollup-plugin-dts": "4.2.1",
+		"rollup-plugin-node-externals": "4.0.0",
 		"rollup-plugin-terser": "7.0.2",
-		"rollup-plugin-typescript-paths": "1.3.0",
-		"typescript": "4.5.4",
-		"tslib": "2.3.1"
+		"rollup-plugin-typescript-paths": "1.3.1",
+		"typescript": "4.6.4",
+		"tslib": "2.4.0"
 	},
 	"scripts": {
 		"build": "rollup --config"
