--- a/packages/slideshow/package.json
+++ b/packages/slideshow/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@calmdownval/presentation",
-	"description": "Preact scroll presentations",
-	"version": "2.2.0",
+	"name": "@calmdownval/slideshow",
+	"description": "Preact scroll slideshows",
+	"version": "1.0.0",
 	"license": "ISC",
 	"main": "./build/index.cjs.min.js",
 	"module": "./build/index.esm.min.mjs",
@@ -12,14 +12,14 @@
 			"default": "./build/index.esm.min.mjs",
 			"types": "./build/index.d.ts"
 		},
-		"./style.css": "./style.css"
+		"./style.css": "./build/style.css"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/CalmDownVal/presentation.git"
+		"url": "https://github.com/CalmDownVal/slideshow.git"
 	},
 	"keywords": [
-		"presentation",
+		"slideshow",
 		"scroll",
 		"preact"
 	],
@@ -29,11 +29,13 @@
 	"devDependencies": {
 		"@rollup/plugin-typescript": "8.3.2",
 		"builtin-modules": "3.2.0",
+		"postcss": "8.4.13",
 		"preact": "10.7.2",
 		"rollup": "2.72.1",
 		"rollup-plugin-delete": "2.0.0",
 		"rollup-plugin-dts": "4.2.1",
 		"rollup-plugin-node-externals": "4.0.0",
+		"rollup-plugin-postcss": "4.0.2",
 		"rollup-plugin-terser": "7.0.2",
 		"rollup-plugin-typescript-paths": "1.3.1",
 		"typescript": "4.6.4",
