--- a/packages/slideshow/package.json
+++ b/packages/slideshow/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@calmdownval/slideshow",
 	"description": "Preact scroll slideshows",
-	"version": "1.0.0",
+	"version": "1.0.0-beta.1",
 	"license": "ISC",
 	"main": "./build/index.cjs.min.js",
 	"module": "./build/index.esm.min.mjs",
